--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -584,31 +584,31 @@
  <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.26f1/Editor/Data/NetStandard/compat/2.0.0/shims/netfx/System.Xml.Serialization.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Timeline.Editor">
- <HintPath>D:/@USERDATA/SH202104/문서/git/ShootingGameTest/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+ <HintPath>D:/@USERDATA/SH202106/Documents/git/ShootingGameTest/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.VSCode.Editor">
- <HintPath>D:/@USERDATA/SH202104/문서/git/ShootingGameTest/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
+ <HintPath>D:/@USERDATA/SH202106/Documents/git/ShootingGameTest/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.TextMeshPro.Editor">
- <HintPath>D:/@USERDATA/SH202104/문서/git/ShootingGameTest/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+ <HintPath>D:/@USERDATA/SH202106/Documents/git/ShootingGameTest/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.UI">
- <HintPath>D:/@USERDATA/SH202104/문서/git/ShootingGameTest/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
+ <HintPath>D:/@USERDATA/SH202106/Documents/git/ShootingGameTest/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Timeline">
- <HintPath>D:/@USERDATA/SH202104/문서/git/ShootingGameTest/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+ <HintPath>D:/@USERDATA/SH202106/Documents/git/ShootingGameTest/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
  </Reference>
  <Reference Include="Unity.CollabProxy.Editor">
- <HintPath>D:/@USERDATA/SH202104/문서/git/ShootingGameTest/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+ <HintPath>D:/@USERDATA/SH202106/Documents/git/ShootingGameTest/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Rider.Editor">
- <HintPath>D:/@USERDATA/SH202104/문서/git/ShootingGameTest/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
+ <HintPath>D:/@USERDATA/SH202106/Documents/git/ShootingGameTest/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.TextMeshPro">
- <HintPath>D:/@USERDATA/SH202104/문서/git/ShootingGameTest/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+ <HintPath>D:/@USERDATA/SH202106/Documents/git/ShootingGameTest/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.UI">
- <HintPath>D:/@USERDATA/SH202104/문서/git/ShootingGameTest/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
+ <HintPath>D:/@USERDATA/SH202106/Documents/git/ShootingGameTest/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
  </Reference>
   </ItemGroup>
   <ItemGroup>
